[cli] Switch from JBR 21 to Zulu 25