@@ -74,6 +74,11 @@ private fun argFileContents(): String = commonDefaultJvmArgs().joinToString("\n"
 private fun commonDefaultJvmArgs(): List<String> = listOf(
     "-ea",
     "-XX:+EnableDynamicAgentLoading",
+    // We need --enable-native-access=ALL-UNNAMED in JRE 24+ because of some JNA usages
+    "--enable-native-access=ALL-UNNAMED",
+    // We need --sun-misc-unsafe-memory-access=allow in JRE 24+ because of OpenTelemetry
+    // See https://github.com/open-telemetry/opentelemetry-java/issues/7219
+    "--sun-misc-unsafe-memory-access=allow",
 )
 
 private fun TarArchiveOutputStream.writeDir(files: List<Path>, targetDirName: String) {
